--- a/css/user_management.css
+++ b/css/user_management.css
@@ -18,12 +18,12 @@
     .admin .navbar-brand {
         width: 172px;
         height: 37px;
-        font-size: 35.9px;
+        font-size: 38px;
         font-weight: lighter;
         font-stretch: normal;
         font-style: normal;
         line-height: 0.65;
-        margin: 14.5px 0px 8.64px 14.97px;
+        margin: 14px 0px 9px 15px;
     }
     
     div.user-icon {
@@ -36,7 +36,7 @@
         width: 94px;
         height: 19px;
         font-size: 16px;
-        color: white;
+        color: #FFFFFF;
         padding: 20px 17px 21px 7px;
     }
     
@@ -80,21 +80,21 @@
     
     .add_new_user {
         background-color: #1FB6FF;
-        color: white;
+        color: #FFFFFF;
         border: 0px;
         padding: 10px;
         margin-right: 12px;
     }
     
     .add_new_user span {
-        border: 1px solid white;
+        border: 1px solid #FFFFFF;
         border-radius: 50%;
         padding: 0px 5px;
         margin-right: 5px;
     }
     
     .user_form {
-        background-color: white;
+        background-color: #FFFFFF;
         margin-right: 5px;
         margin-left: 2px;
         padding: 20px;
@@ -102,8 +102,8 @@
     }
     
     .user_form .clear {
-        background-color: white;
-        color: black;
+        background-color: #FFFFFF;
+        color: #646464;
         border: 1px solid #DEDDDD;
     }
     
@@ -169,7 +169,7 @@
     
     .popup .popuptext {
         visibility: hidden;
-        background-color: white;
+        background-color:#FFFFFF;
         opacity: 1;
         width: 160px;
         color: #646464;
@@ -243,7 +243,7 @@
     
     .pagenumber-right .active {
         background-color: #646464;
-        color: white
+        color: #FFFFFF
     }
     
     .transform_btn {
